gio/gnotification.c
@@ -310,6 +310,8 @@ g_notification_get_priority (GNotification *notification)
  * Deprecated in favor of g_notification_set_priority().
  *
  * Since: 2.40
+ * Deprecated: 2.42: Since 2.42, this has been deprecated in favour of
+ *    g_notification_set_priority().
  */
 void
 g_notification_set_urgent (GNotification *notification,
